# PTU2BIN

./: .gitignore  Bericht20190910-1040.diagsession  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.txt  PTU2BIN.sln  README.md  README.txt  TODO.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-bigsure.yml  cmake-windows.yml  cmake.yml  codeql-analysis.yml  main.yml  msbuild.yml
PTU2BIN/: CMakeLists.txt  PTU2BIN.cpp  PTU2BIN.vcxproj  PTU2BIN.vcxproj.filters  PTUFileHeader.cpp  PTUFileHeader.h  RecordBuffer.h  TTTRRecordProcessor.cpp  TTTRRecordProcessor.h  export_igor_ibw.cpp  export_igor_ibw.h
convertPTUs/: CMakeLists.txt  convertPTUs.py  convertPTUs.pyproj
