cmake_minimum_required (VERSION 3.10)

project ("PTU2BIN")
include(InstallRequiredSystemLibraries)
set(CPACK_RESOURCE_FILE_LICENSE  ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt)
set(CPACK_PACKAGE_VERSION_MAJOR "2")
set(CPACK_PACKAGE_VERSION_MINOR "0")
include(CPack)

option(DOPERFORMANCEANALYSIS "enable timing of execution time" OFF)
if(DEFINED ENV{USERPROFILE})
option(MS_PERUSERINSTALL "per-user installation" ON)
endif()
add_subdirectory ("PTU2BIN")
add_subdirectory ("convertPTUs")
if(MS_PERUSERINSTALL)
STRING(REGEX REPLACE "\\\\" "/" TMP_DIR_1 $ENV{USERPROFILE})
set(CMAKE_INSTALL_PREFIX ${TMP_DIR_1})
message(STATUS "New install prefix (per-user installation): " ${CMAKE_INSTALL_PREFIX})
endif()
