cmake_minimum_required (VERSION 3.12)

project ("PTU2BIN" LANGUAGES CXX)

include(InstallRequiredSystemLibraries)
set(CPACK_RESOURCE_FILE_LICENSE  ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt)
set(CPACK_PACKAGE_VERSION_MAJOR "2")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_CONTACT "christian@halaszovich.de")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "tool to convert PicoQuant ptu files to bin files")
set(CPACK_PACKAGE_VENDOR "C. R. Halaszovich, MD")
set(CPACK_DEBIAN_PACKAGE_SECTION "science/utils")
set(CMAKE_PROJECT_HOMEPAGE_URL "https://github.com/ChrisHal/PTU2BIN")
include(CPack)

option(DOPERFORMANCEANALYSIS "enable timing of execution time" OFF)
if(DEFINED ENV{USERPROFILE})
option(MS_PERUSERINSTALL "per-user installation" ON)
endif()
add_subdirectory ("PTU2BIN")
add_subdirectory ("convertPTUs")
if(MS_PERUSERINSTALL)
STRING(REGEX REPLACE "\\\\" "/" TMP_DIR_1 $ENV{USERPROFILE})
set(CMAKE_INSTALL_PREFIX ${TMP_DIR_1})
message(STATUS "New install prefix (per-user installation): " ${CMAKE_INSTALL_PREFIX})
endif()
